assets/less/app.less
/*!
 * Roots 6.5.2
 */

@import "bootstrap/bootstrap.less";




/* ==========================================================================
   Base
   ========================================================================== */

body {font-size:100%; }
html, body {
  width: auto !important;
  overflow-x: hidden !important;
}

.wrap.container {padding-top:100px; }
.content.row {margin-bottom: 200px;}

/* ==========================================================================
   Navigation
   ========================================================================== */
.navbar-inverse { border-radius: 0; background:rgba(0, 0, 0, .7); border-bottom:1px solid rgba(255, 255, 255, 0.15); min-height:100px; padding-top:25px; margin-bottom:0;}
.navbar-inverse *:focus { outline: 0; }


.navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-nav > .open ul > a { color:rgba(255, 255, 255, .7); transition: color 0.5s ease; }

.navbar-inverse .navbar-nav > .active > a,
.navbar-inverse .navbar-nav > .active > a:hover, 
.navbar-inverse .navbar-nav > .active > a:focus { color: #fff; background:none ; }
.navbar-inverse .navbar-nav > .open > a{ background:none; color:white; }

.navbar-inverse .navbar-nav>li>a:hover, 
.navbar-inverse .navbar-nav>li>a:focus,
.navbar-inverse .navbar-nav>.open>a:hover, 
.navbar-inverse .navbar-nav>.open>a:focus { background:none; color:white; }

.navbar-inverse .navbar-nav > .active > a { background:none; color:white; }

.navbar-inverse .navbar-brand {font-size: 24px; color:white; padding:0 0 0 15px; margin:12px 0 0 0; }
  .navbar-inverse .navbar-brand img { margin-top:-8px;}

.navbar-nav .dropdown-menu {left:-5px; font-size: 13px; background-color: rgba(0, 0, 0, .7); border: 0px none; -webkit-border-radius: 0px; -moz-border-radius: 0px; border-radius: 0px; -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
}
.navbar-nav .dropdown-menu > li > a { color:rgba(255, 255, 255, .7); padding:7px 20px; }
  .navbar-nav .dropdown-menu > li > a:hover,
  .navbar-nav .dropdown-menu > li > a:focus,
  .navbar-nav .dropdown-menu > .active > a:hover{ background: rgba(255, 255, 255, .1); color:white; }

.navbar-nav .dropdown-menu > .active > a,
.navbar-nav .dropdown-menu > .active > a:focus { background: none; color:#fff; }

.navbar-nav .btn { border:1px solid rgba(255, 255, 255, .2); margin-left:5px; margin-top:5px; padding-top:10px; padding-bottom:10px; }

.navbar-nav a.btn:focus, 
.navbar-nav a.btn:hover  { border:1px solid rgba(255,255,255,.6); }

.navbar-collapse { border:0 none;  border-top:0 none; box-shadow: none; }
.navbar-static-top,
.navbar-fixed-top,
.navbar-fixed-bottom { border-radius: 0; }

.nav-pills>li>a {color: #777777;}
.nav-pills>li>a:hover {color: #ffffff; background: rgba(0,0,0,.9); transition: background 0.5s ease;border-left: 5px solid #6600ff;}
.nav-pills>li.active>a,  .nav-pills>li.active>a:focus{color: inherit; background: inherit; border-left: 5px solid #6600ff;}
.nav-pills>li.active>a:hover {background: rgba(0,0,0,.9);}

.btn-sdss:hover{color: #ffffff; background: rgba(0,0,0,.9); transition: background 0.5s ease;border-left: 5px solid #6600ff;}

.btn-sdss:hover, .btn-sdss:focus, .btn-sdss:active, .btn-sdss.active, .open .dropdown-toggle.btn-sdss {color: #ffffff; background: rgba(0,0,0,.9); transition: background 0.5s ease;border-left: 5px solid #6600ff;}

/* ==========================================================================
   Header
   ========================================================================== */

.banner {}

.navbar-default {background-color: @brand-sdss-clouds; border: 3px solid darken(@brand-sdss-clouds, 20%); border-width: 0 1px 4px 1px;}

/* Autohide navbar */
.slideUp { top:-100px; }
.headroom { -webkit-transition: all 0.4s ease-out; -moz-transition: all 0.4s ease-out; -o-transition: all 0.4s ease-out; transition: all 0.4s ease-out; }

.progress-bar-theme {
  background-color: #1abc9c;
}

.headroom { position: fixed;top: 0;left: 0;right: 0;transition: all .4s ease-in-out;}
.headroom--unpinned {top: -100px;}
.headroom--pinned {top: 0;}


/* ==========================================================================
   Content
   ========================================================================== */
.content {}
.hero {position: relative; overflow: hidden; margin-bottom: 0; padding: 0; } 
.hero-unit {position: relative; overflow: hidden; margin-bottom: 6%;}
.panner { overflow: hidden; line-height: 0;}
.panner img { max-width: 4909px;}
.panner img { width: 500%; max-width: 2500px;}
.branding {background: rgba(0,0,0,0.7); color: #fff; display: block; padding: 0 1%; width: 100%; text-decoration: none; font-size: 1.2em; transition: background-color 0.3s ease; } 
.branding>p {font-size: 18px; } .surveys {margin-bottom: 2em; } 
#surveys { width: 100%; padding: 50px 0; color: #fff; text-shadow: 2px 2px 3px rgba(0,0,0,.9); background:url('/wp-content/uploads/2014/04/sdss-telescope.png')no-repeat bottom center fixed; background-color: #000; -webkit-background-size: cover; -moz-background-size: cover; background-size: cover; -o-background-size: cover;}
.flex-caption {color: @body-bg; width: 40%; padding: 10px; margin: 0 0 60px 60px; background-color: #222; background: rgba(0,0,0,.8); position: absolute; display: block; left: 0; bottom: 0; border-left: 4px solid @brand-sdss; } 
#myCarousel .nav a small {display:block;}
#myCarousel .nav {background:#eee;}
#myCarousel .nav a {border-radius:0px;}
.survey-item {position:relative; padding:0; -webkit-box-shadow: 0 0 10px rgba(204,204,204,.8);-moz-box-shadow: 0 0 10px rgba(204,204,204,.8);box-shadow: 0 0 10px rgba(204,204,204,.8);}

/* ==========================================================================
   Primary Content
   ========================================================================== */

.main { }

/* Gallery Shortcode */
.gallery-row { padding: 15px 0; }
/* ... */

